--- a/app/src/main/res/layout/customitem.xml
+++ b/app/src/main/res/layout/customitem.xml
@@ -34,14 +34,16 @@
             android:layout_height="match_parent"
             android:layout_weight="3.0"
             android:id="@+id/llpa"
-            android:background="#ff0dff00"
-            android:layout_marginRight="10sp">
+            android:layout_marginRight="10sp"
+            android:gravity="center">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="center"
+                android:textColor="#ffffff"
                 android:text="Present"
+                android:background="@drawable/present"
                 android:id="@+id/tvpa"
                 android:layout_margin="10sp"
 
