--- a/app/src/main/res/layout/tabpreview.xml
+++ b/app/src/main/res/layout/tabpreview.xml
@@ -62,7 +62,7 @@
                     android:id="@+id/tab2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#da8200"
+                    android:background="#FFFFFF"
                     android:orientation="vertical">
 
                     <ListView
@@ -75,7 +75,7 @@
                     android:id="@+id/tab3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#5b89ff"
+                    android:background="#FFFFFF"
                     android:orientation="vertical">
 
                     <ListView
@@ -87,7 +87,7 @@
                     android:id="@+id/tab4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#5b89ff"
+                    android:background="#FFFFFF"
                     android:orientation="vertical">
 
                     <ListView
