--- a/app/src/main/res/layout/selection.xml
+++ b/app/src/main/res/layout/selection.xml
@@ -20,7 +20,39 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="100">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="20sp"
+                android:text="    A.R.M"
+                android:gravity="center_vertical"
+                android:textStyle="bold"
+                android:layout_weight="95"
+                />
+                <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                android:layout_weight="5"
+                    >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/morebtn"
+                android:layout_gravity="center_vertical"
+
+                android:gravity="center"
+                android:textSize="5sp"
+                android:text=" "
+                android:background="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
+            </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
     <LinearLayout
@@ -32,22 +64,40 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Preview"
-            android:id="@+id/btntest"
-            />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="Class"
             android:id="@+id/btnclass"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:background="@android:color/transparent" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="hour"
-            android:id="@+id/btnhour" />
-    </LinearLayout>
+            android:id="@+id/btnhour"
+            android:background="@android:color/transparent" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="100">
+            <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="65"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="20" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Import"
+                android:gravity="center_vertical"
+                android:layout_gravity="right"
+                android:layout_weight="15"/>
+
+        </LinearLayout>
+        </LinearLayout>
 
 
 
