--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -73,7 +73,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Logging in as : ShivaKishore"
+            android:text=""
             android:id="@+id/tvLoginNotification"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/colorSecondaryText"
