added import feature

--- a/app/src/main/res/layout/selection.xml
+++ b/app/src/main/res/layout/selection.xml
@@ -96,7 +96,8 @@
                 android:text="Import"
                 android:gravity="center_vertical"
                 android:layout_gravity="right"
-                android:layout_weight="15"/>
+                android:layout_weight="15"
+                android:id="@+id/tvimport" />
 
         </LinearLayout>
         </LinearLayout>
