--- a/app/src/main/res/layout/selection.xml
+++ b/app/src/main/res/layout/selection.xml
@@ -103,6 +103,13 @@
         </LinearLayout>
 
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="MergeRootFrame" >
 
 
 
@@ -111,6 +118,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </LinearLayout>
 
