--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -41,6 +41,17 @@
     </android.support.design.widget.AppBarLayout>
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Settings"
+        android:id="@+id/tvSettingsTitle"
+        android:layout_gravity="center_horizontal"
+        android:textSize="40sp"
+        android:layout_marginBottom="20sp"
+        />
+
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
